--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -25,7 +25,7 @@ monitor=DP-2,2560x1440@155,0x0,1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = alacritty
 $fileManager = ranger
 $browser = firefox-developer-edition
 $menu = wofi --show drun
