--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -40,7 +40,7 @@ $menu = wofi --show drun
 
 exec-once = mako
 exec-once = hyprpaper
-exec-once = sh ~/.config/waybar/launch.sh
+exec-once = $XDG_CONFIG_HOME/waybar/launch.sh
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -196,10 +196,10 @@ bind = $mainMod, T, exec, $terminal --hold gtop
 bind = $mainMod SHIFT, M, exec, $terminal --hold cmatrix
 bind = $mainMod, G, fullscreen
 bind = $mainMod, B, togglefloating,
-bind = $mainMod, R, exec, sh ~/.config/wofi/launch.sh
+bind = $mainMod, R, exec, $XDG_CONFIG_HOME/wofi/launch.sh
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, O, togglesplit, # dwindle
-bind = $mainMod SHIFT, W, exec, sh ~/.config/waybar/launch.sh
+bind = $mainMod SHIFT, W, exec, $XDG_CONFIG_HOME/waybar/launch.sh
 bindel =, XF86AudioRaiseVolume, exec, pamixer -i 1
 bindel =, XF86AudioLowerVolume, exec, pamixer -d 1
 bindl =, XF86AudioMute, exec, pamixer --set-volume 0
