--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
-preload = ~/.config/hypr/wallpapers/catppuccin1.png
+preload = $XDG_CONFIG_HOME/hypr/wallpapers/catppuccin1.png
 
-wallpaper = DP-2,/home/angus/.config/hypr/wallpapers/catppuccin1.png
+wallpaper = DP-2,XDG_CONFIG_HOME/hypr/wallpapers/catppuccin1.png
 
 splash = true
